# Auto-Vec

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
tests/failures/: no_input.rs  no_input.stderr  no_output.rs  no_output.stderr  no_typed_input.rs  no_typed_input.stderr
