[package]
name = "auto_vec"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.19", features = ["extra-traits"]  }
quote = "1.0.4"
proc-macro2 = "1.0.12"
