[package]
name = "auto_vec"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"
description = "Auto-vec is simple proc macro to vectorize your scalar functions"
readme = "README.md"
repository = "https://github.com/psinghal20/Auto-Vec"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.19", features = ["full", "extra-traits"]  }
quote = "1.0.4"
proc-macro2 = "1.0.12"

[dev-dependencies]
trybuild = "1.0"
